# HotelFlowBackend

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
src/apps/common/: apps.py
src/apps/common/models/: fields.py
src/apps/core/: apps.py  urls.py
src/apps/core/v1/: urls.py
src/apps/employees/: apps.py
src/apps/hotel/: admin.py  apps.py  models.py  serializers.py  views.py
src/apps/hotel/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20250514_0032.py
src/apps/users/: admin.py  permissions.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_auto_20250513_1707.py
src/apps/users/models/: models.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/django/: base.py
src/config/settings/: cors.py  jwt.py
